# CavalierContours

./: .clang-format  .gitignore  CMakeLists.1.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: CI_tests.yml  ci_linux.yml  ci_macos.yml  ci_windows.yml
c_api_include/: cavaliercontours.h
examples/: CMakeLists.txt  basicpolylinefunctions.cpp  polylinecombine.cpp  polylineoffset.cpp  polylineoffsetislands.cpp  windingnumber.cpp
include/: intrcircle2circle2.h  intrlineseg2circle2.h  intrlineseg2lineseg2.h  intrlineseg2lineseg2.hpp  polyline.h  polylineoffset.hpp  polylineoffsetislands.hpp  staticspatialindex.h  vector.h  vector2.h
include/cavc/: intrcircle2circle2.h  intrlineseg2circle2.h  intrlineseg2lineseg2.h  mathutils.h  mathutils.hpp  plinesegment.h  plinesegment.hpp  polyline.h  polyline.hpp  polylinecombine.h  polylinecombine.hpp  polylineintersects.h  polylineintersects.hpp  polylineoffset.h  polylineoffset.hpp  polylineoffsetislands.hpp  staticspatialindex.h  staticspatialindex.hpp  vector.h  vector.hpp  vector2.h  vector2.hpp
include/cavc/internal/: diagnostics.hpp
src/: cavaliercontours.cpp
tests/: CMakeLists.txt  c_api_tests.cpp  testhelpers.hpp
tests/benchmarks/: CMakeLists.txt  benchmarkprofiles.h  googlebenchmark.cmake  windingnumberbenchmarks.cpp
tests/polylinefactory/: CMakeLists.txt
tests/polylinefactory/include/: polylinefactory.hpp
tests/tests/: CMakeLists.txt  TEST_cavc_combine_plines.cpp  TEST_cavc_parallel_offset.cpp  TEST_cavc_pline.cpp  TEST_cavc_pline_function.cpp  TEST_sample.cpp  TEST_staticspatialindex.cpp  c_api_test_helpers.hpp  cavc_combine_plines_tests.cpp  cavc_parallel_offset_tests.cpp  cavc_pline_function_tests.cpp  cavc_pline_tests.cpp  googletest.cmake  staticspatialindex_tests.cpp  testhelpers.hpp
tests/tests/include/: c_api_test_helpers.hpp  testhelpers.hpp
